Add GitHub links to DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,3 +22,5 @@ Imports:
     ggplot2,
     ggpubr,
     magrittr
+URL: https://github.com/Het12345678/project
+BugReports: https://github.com/Het12345678/project/issues
